--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,73 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 /* home */
+.contain-arrow{
+  height: 100px;
+}
 .all-home{
+ border: 1px solid green;
  display: grid;
  place-items: center;
  height: 500px; 
 }
+
 .ash{
+  position: relative;
   height: 200px;
+  animation-name: moveAll;
+  animation-duration: 2s;
+  animation-delay: 0.5s;
+  animation-timing-function: linear;
+  animation-direction:normal;
+  animation-iteration-count: 1;
+}
+@keyframes moveAll {
+  0%{
+    opacity: 0.1;
+    right: 40%;
+
+  }
+  50%{
+    right: 20%;
+
+
+  }
+  100%{
+    right: 0%;
+
+  }
 }
 .img-arrow{
-  height: 150px;
+  position: relative;
+  animation-duration: 1s;
+  animation-name: moveArrow;
+  animation-timing-function: linear;
+  animation-direction: normal;
+  animation-iteration-count: infinite;
+  height: 50px;
+  width: 50px;
   transform: rotate(-180deg);
 }
+
+@keyframes moveArrow {
+  0%{
+    opacity: 0.5;
+    top: 0;
+
+  }
+  50%{
+    
+    top: 35%;
+
+  }
+  100%{
+  
+    top: 75%;
+
+  }
+  
+}
+
 .content-form-home{
   border: 1px solid grey;
   
@@ -36,6 +91,31 @@
   cursor: pointer;
   height: 35px;
 }
+/* type */
+.filter-by-type{
+  height: 25px;
+  display: flex;
+  justify-content:center;
+  width: 100%;
+  padding-right: 50px;
+}
+@media (max-width: 1260px) {
+  .filter-by-type{
+    margin-top: 10px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }}
+
+  select{
+  border-radius: 5px;
+  width: 200px;
+  background-color: rgb(150, 147, 147);
+}
+option{
+  background-color: lightgray;
+}
+
 /* cards */
 .div-name-card{
   height: 50px;
@@ -124,6 +204,7 @@
 }
 /* search input */
 .content-search{
+  margin-bottom: 10px;
   margin-left: 50px;
   padding: 0 20px;
 }
@@ -131,6 +212,13 @@
   width: 200px ;
   border: 1px solid grey;
   border-radius: 5px;
+}
+@media (max-width: 1260px) {
+  .content-search{
+    margin: 0;
+    display: flex;
+    justify-content: center;
+  }
 }
 .input-search{
   border: none;
@@ -162,7 +250,6 @@ align-items: center;
 }
 .content-details-3{
   width: 40%;
-
 }
 
 .content-move{
@@ -261,7 +348,6 @@ align-items: center;
   z-index: 1;
 }
 .pokemon-img{
-
   height: 190px;
   width: 180px;
 }
@@ -281,4 +367,25 @@ align-items: center;
   background:rgba(255, 0, 0, 0.959);
   margin-left: 10px;
   border-radius: 20px;
+}
+.button-back{
+  color: red;
+  height: 40px;
+  width: 40px;
+  border: transparent;
+  border-radius: 50%;
+}
+.house{
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content-button{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 10px 60px;
 }
