--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   height: 100px;
 }
 .all-home{
- border: 1px solid green;
  display: grid;
  place-items: center;
  height: 500px; 
@@ -197,6 +196,7 @@ option{
 }
 /* pokedex */
 .message{
+  margin-top: 50px;
   color: rgb(87, 85, 85);
   display: flex;
   justify-content: center;
@@ -297,6 +297,10 @@ align-items: center;
   margin-top: 50px;
 
 }
+/* name details */
+.name-details{
+  text-decoration:underline ;
+}
 .title-card-detail{
   color: goldenrod;
   margin: 30px auto;
@@ -319,6 +323,13 @@ align-items: center;
 }.weight, .abilities{
   color: grey;
 }
+/* name details type and abilities */
+.name-abilities{
+  color: rgb(63, 62, 62);
+}
+.name-type{
+  color: blue;
+}
 .details-img{
   border: 1px transparent solid;
   background-color: red;
@@ -330,6 +341,12 @@ align-items: center;
   border: 2px solid black;
   border-radius: 20px;
 }
+.img-details > img{
+
+height: 200px;
+width: 200px;
+
+}
 .img-details{
   position: absolute;
   z-index: 1;
@@ -338,8 +355,11 @@ align-items: center;
   height: 200px;
   border: black solid 3px;
   border-radius: 50%;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .line-black{
   position: absolute;
   height: 20px;
@@ -349,7 +369,7 @@ align-items: center;
 }
 .pokemon-img{
   height: 190px;
-  width: 180px;
+  width: 300px;
 }
 .bg-white{
   border-bottom-left-radius: 25px;
@@ -361,22 +381,24 @@ align-items: center;
   background-color: whitesmoke;
 }
 .prev, .next{
+  border: transparent;
   margin-top: 50px;
   height: 80px;
-  width: 120px;
+  width: 80px;
   background:rgba(255, 0, 0, 0.959);
   margin-left: 10px;
-  border-radius: 20px;
+  border-radius: 50%;
 }
 .button-back{
-  color: red;
-  height: 40px;
-  width: 40px;
+  margin-top: 60px;
+  color: gray;
+  height: 50px;
+  width: 50px;
   border: transparent;
   border-radius: 50%;
 }
 .house{
-  font-size: 50px;
+  font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -388,4 +410,74 @@ align-items: center;
   justify-content: end;
   align-items: center;
   padding: 10px 60px;
+}
+/* pokebowl */
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.pokebola {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  background-color: #FFF;
+  border: 5px solid #000;
+  border-radius: 50%;
+  box-shadow: inset -10px 10px 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  animation: gira 4s infinite;
+  margin: 20px auto;
+}
+.pokebola:before, .pokebola:after {
+  content: "";
+  position: absolute;
+}
+.pokebola:before {
+  background-color: #EF4036;
+  width: 100%;
+  height: 50%;
+}
+.pokebola:after {
+  top: calc(50% - 10px);
+  width: 100%;
+  height: 20px;
+  background-color: #000;
+}
+.pokebola-botao {
+  width: 50px;
+  height: 50px;
+  background-color: #FFF;
+  border: 10px solid #000;
+  border-radius: 50%;
+  position: absolute;
+  top: calc(50% - 25px);
+  left: calc(50% - 25px);
+  z-index: 10;
+}
+.pokebola-botao:before {
+  content: "";
+  position: absolute;
+  top: calc(50% - 10px);
+  left: calc(50% - 10px);
+  width: 20px;
+  height: 20px;
+  background-color: #FFF;
+  border: 3px solid #000;
+  border-radius: 50%;
+  z-index: 10;
+}
+
+@keyframes gira {
+  0% { 
+    right: 50%;
+    transform: rotate(-45deg); 
+  }
+  50% {
+    right:0;
+    transform: rotate(45deg); 
+  }
+  100% { transform: rotate(-45deg);
+   }
 }
