--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,12 @@
     display: flex;
     justify-content: center;
   }}
+@media (max-width: 574px) {
+  .filter-by-type{
+    margin-left: 50px;
+    display: flex;
+    justify-content: center;
+  }}
 
   select{
   border-radius: 5px;
@@ -141,6 +147,14 @@ option{
   flex-wrap: wrap;
   gap:25px ;
   margin-left: 50px;
+}
+@media (max-width: 574px) {
+  .list-map{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
 }
 .ul-card{
   background-color: rgba(255, 0, 0, 0.795);
@@ -202,6 +216,12 @@ option{
   justify-content: center;
   margin-bottom: 20px;
 }
+@media (max-width:700px) {
+  .message{
+   margin-left: 20px;
+  }
+  
+}
 /* search input */
 .content-search{
   margin-bottom: 10px;
@@ -209,8 +229,10 @@ option{
   padding: 0 20px;
 }
 .form-search{
-  width: 200px ;
-  border: 1px solid grey;
+  width: 205px ;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid grey;
   border-radius: 5px;
 }
 @media (max-width: 1260px) {
@@ -220,6 +242,14 @@ option{
     justify-content: center;
   }
 }
+@media (max-width: 574px) {
+  .content-search{
+    margin-left: 50px;
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .input-search{
   border: none;
   padding-left: 5px;
@@ -228,13 +258,14 @@ option{
 }
 .button-search{
   font-size: 18px;
-  width: 35px;
+  width: 30px;
+  background-color: transparent;
   border: none;
-  background-color: white;
   cursor: pointer;
 }
 /* details */
 .content-details{
+height: 100%;
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -341,8 +372,9 @@ align-items: center;
   border: 2px solid black;
   border-radius: 20px;
 }
-.img-details > img{
 
+.img-details > img{
+border: transparent;
 height: 200px;
 width: 200px;
 
@@ -480,4 +512,98 @@ width: 200px;
   }
   100% { transform: rotate(-45deg);
    }
+}
+/* loader content */
+.content-loader{
+  top: 0;
+  bottom: 0;
+  position: fixed;
+  z-index: 999;
+  opacity: 0.9;
+  background-color: lightgray;
+  width: 100%;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  
+}
+/* loader */
+.lds-spinner {
+  color: #000;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #000;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
